[package]
name = "txkit"
version = "0.1.0"
authors = ["Vincent Tavernier <vince.tavernier@gmail.com>"]
edition = "2018"
license = "MIT"

[lib]
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[dependencies]
log = "0.4.8"
env_logger = "0.7.1"

tinygl = { git = "https://github.com/vtavernier/tinygl.git", optional = true, default-features = false }
glutin = { version = "0.24.0", optional = true }
failure = "0.1.7"
ndarray = "0.13.0"
lazy_static = "1.4.0"
rayon = { version = "1", optional = true }
strum = "0.18.0"
strum_macros = "0.18.0"
num-traits = "0.2"
paste = "0.1.9"
libc = "0.2"
cgmath = "0.17"
thiserror = "1.0"

[build-dependencies]
anyhow = "1.0"
tinygl-compiler = { git = "https://github.com/vtavernier/tinygl.git", optional = true, features = ["backend-shaderc", "codegen"] }

[dev-dependencies]
anyhow = "1.0"
image = "0.23.11"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]

[features]
default = ["cpu", "gpu", "builtin", "builtin-gpu"]
cpu = ["rayon", "ndarray/rayon"]
gpu = ["tinygl/opengl46", "gpu-core"]
gpu45 = ["tinygl/opengl45", "gpu-core"]
gpu-core = ["tinygl", "glutin"]
builtin = ["method-debug", "method-whitenoise", "method-valuenoise"]
builtin-gpu = ["wrap-shaders"]
method-debug = []
method-whitenoise = []
method-valuenoise = []
wrap-shaders = ["tinygl-compiler"]

[[example]]
name = "debug"
required-features = ["method-debug", "gpu-core"]

[[example]]
name = "whitenoise"
required-features = ["method-whitenoise", "gpu-core"]

[[example]]
name = "valuenoise"
required-features = ["method-valuenoise", "gpu-core"]
