[package]
name = "txkit-builtin"
version = "0.1.0"
authors = ["Alixinne <alixinne@pm.me>"]
edition = "2018"

[dependencies]
txkit-core = { version = "=0.1.0", default-features = false }
txkit-impl = { version = "=0.1.0", default-features = false }

ndarray = "0.15"
cgmath = "0.18"
tinygl = { git = "https://github.com/alixinne/tinygl.git", optional = true, default-features = false }

[features]
default = ["cpu", "gpu"]
cpu = ["txkit-core/cpu", "txkit-impl/cpu"]
gpu = ["txkit-core/gpu", "txkit-impl/gpu", "tinygl"]
gpu45 = ["txkit-core/gpu45", "txkit-impl/gpu45", "tinygl"]
