[package]
name = "txkit-cli"
version = "0.1.0"
authors = ["Alixinne <alixinne@pm.me>"]
edition = "2018"

[dependencies]
txkit-builtin = { version = "=0.1.0", default-features = false }
txkit-core = { version = "=0.1.0", default-features = false }

argh = "0.1"
color-eyre = "0.5"
image = "0.23"
env_logger = "0.9"
log = "0.4"
base64 = "0.13.0"

[features]
default = ["cpu", "gpu"]
cpu = ["txkit-builtin/cpu", "txkit-core/cpu"]
gpu = ["txkit-builtin/gpu", "txkit-core/gpu"]
gpu45 = ["txkit-builtin/gpu45", "txkit-core/gpu45"]
