[package]
name = "txkit-core"
version = "0.1.0"
authors = ["Vincent Tavernier <vince.tavernier@gmail.com>"]
edition = "2018"
license = "MIT"

[dependencies]
log = "0.4.8"

tinygl = { git = "https://github.com/vtavernier/tinygl.git", optional = true, default-features = false }
glutin = { version = "0.24.0", optional = true }
ndarray = "0.13.0"
rayon = { version = "1", optional = true }
strum = "0.18.0"
strum_macros = "0.18.0"
num-traits = "0.2"
paste = "0.1.9"
cgmath = "0.17"
thiserror = "1.0"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]

[features]
default = ["cpu", "gpu"]
cpu = ["rayon", "ndarray/rayon"]
gpu = ["tinygl/opengl46", "gpu-core"]
gpu45 = ["tinygl/opengl45", "gpu-core"]
gpu-core = ["tinygl", "glutin"]
