[package]
name = "txkit-core"
version = "0.1.0"
authors = ["Alixinne <alixinne@pm.me>"]
edition = "2018"
license = "MIT"

[dependencies]
log = "0.4"

tinygl = { git = "https://github.com/alixinne/tinygl.git", optional = true, default-features = false }
glutin = { version = "0.27", optional = true }
ndarray = "0.15"
rayon = { version = "1.5", optional = true }
strum = "0.22"
strum_macros = "0.22"
num-traits = "0.2"
paste = "1.0"
cgmath = "0.18"
thiserror = "1.0"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]

[features]
default = ["cpu", "gpu"]
cpu = ["rayon", "ndarray/rayon"]
gpu = ["tinygl/opengl46", "gpu-core"]
gpu45 = ["tinygl/opengl45", "gpu-core"]
gpu-core = ["tinygl", "glutin"]
