[package]
name = "txkit-impl"
version = "0.1.0"
authors = ["Alixinne <alixinne@pm.me>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
anyhow = "1"
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0"
tinygl-compiler = { git = "https://github.com/alixinne/tinygl.git", optional = true, default-features = false, features = ["codegen"] }
heck = "0.3"

[features]
default = ["cpu", "gpu"]
cpu = []
gpu = ["tinygl-compiler/backend-shaderc"]
gpu45 = ["tinygl-compiler/backend-shaderc"]
