[package]
name = "txkit-tests"
version = "0.1.0"
authors = ["Vincent Tavernier <vince.tavernier@gmail.com>"]
edition = "2018"

[dependencies]
txkit-core = "=0.1.0"
txkit-builtin = "=0.1.0"

[dev-dependencies]
libc = "0.2"
tempdir = "0.3"

[features]
default = ["cpu", "gpu"]
cpu = ["txkit-builtin/cpu"]
gpu = ["txkit-builtin/gpu"]
gpu45 = ["txkit-builtin/gpu45"]

[[test]]
name = "c_api"
harness = false
required-features = ["cpu", "gpu"]
